--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required (VERSION 3.10)
 
 project (mactest)
 
+include_directories(include)
+
 add_subdirectory (app)
 add_subdirectory (lib)
 add_subdirectory (plug)
