--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,3 +3,8 @@ project (lib)
 add_library(lib SHARED lib.cpp)
 
 target_link_libraries(lib app)
+
+set_target_properties(lib
+  PROPERTIES
+    PREFIX ""
+    SUFFIX ".so")
