--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,5 +6,6 @@ target_link_libraries(lib app)
 
 set_target_properties(lib
   PROPERTIES
+    LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/Plugins/luafar"
     PREFIX ""
     SUFFIX ".so")
