--- a/myplug/CMakeLists.txt
+++ b/myplug/CMakeLists.txt
@@ -2,10 +2,10 @@ project (myplug)
 
 add_library(myplug MODULE myplug.cpp)
 
-target_link_libraries(myplug lib)
+target_link_libraries(myplug mylib)
 
 set_target_properties(myplug
   PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/Plugins/luafar/myplug/plug"
+    LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/Plugins/mylib/myplug/plug"
     PREFIX ""
     SUFFIX ".far-plug-wide")
