--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 3.10)
 
-project (app)
+project (far)
 
-set(APP_NAME "app")
+set(APP_NAME "far")
 
 include_directories(include)
 
@@ -12,7 +12,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     set(EXECUTABLE_NAME ${APP_NAME})
 else()
     set(INSTALL_DIR ${CMAKE_BINARY_DIR}/install)
-    set(EXECUTABLE_NAME app)
+    set(EXECUTABLE_NAME far)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ffunction-sections -fdata-sections")
     if (NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
@@ -21,6 +21,6 @@ else()
     endif()
 endif()
 
-add_subdirectory (app)
-add_subdirectory (lib)
+add_subdirectory (far)
+add_subdirectory (mylib)
 add_subdirectory (myplug)
