--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,19 +6,19 @@ set(APP_NAME "far")
 
 include_directories(include)
 
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+if(${CMAKE_SYSTEM_NAME} MATCHES "Dar__win")
     set(APP_DIR ${CMAKE_BINARY_DIR}/install)
     set(INSTALL_DIR ${APP_DIR}/${APP_NAME}.app/Contents/MacOS)
     set(EXECUTABLE_NAME ${APP_NAME})
 else()
     set(INSTALL_DIR ${CMAKE_BINARY_DIR}/install)
     set(EXECUTABLE_NAME far)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ffunction-sections -fdata-sections")
-    if (NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,--gc-sections")
-    endif()
+    # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
+    # set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ffunction-sections -fdata-sections")
+    # if (NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    #     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
+    #     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,--gc-sections")
+    # endif()
 endif()
 
 add_subdirectory (far)
