--- a/far/CMakeLists.txt
+++ b/far/CMakeLists.txt
@@ -16,3 +16,8 @@ endif()
 set_target_properties(far
     PROPERTIES
     ENABLE_EXPORTS TRUE)
+
+add_custom_command(TARGET far
+    POST_BUILD
+    COMMAND "nm -D far"
+)
