--- a/far/CMakeLists.txt
+++ b/far/CMakeLists.txt
@@ -19,5 +19,5 @@ set_target_properties(far
 
 add_custom_command(TARGET far
     POST_BUILD
-    COMMAND "nm -D far"
+    COMMAND "nm" "-D" "far"
 )
