--- a/myplug/CMakeLists.txt
+++ b/myplug/CMakeLists.txt
@@ -1,11 +1,11 @@
-project (myplug CXX C)
+project (myplug)
 
 add_library(myplug MODULE myplug.cpp)
 
-target_link_libraries(myplug mylib)
+target_link_libraries(myplug luafar)
 
 set_target_properties(myplug
   PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/Plugins/mylib/myplug/plug"
+    LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/Plugins/luafar/myplug/plug"
     PREFIX ""
     SUFFIX ".far-plug-wide")
