Add fake winport

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ else()
     endif()
 endif()
 
+add_subdirectory (winport)
 add_subdirectory (far)
 add_subdirectory (luafar)
 add_subdirectory (myplug)
