Include the running step for all jobs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,6 +134,11 @@ jobs:
         run: |
           cmake --build _build --config $BUILD_TYPE
 
+      - name: Test
+        working-directory: ${{github.workspace}}/_build/install
+        shell: bash
+        run: ./far
+
       # - name: Validate AppStream metainfo file
       #   run: appstreamcli validate --strict _build/far2l/DE/io.github.elfmz.far2l.metainfo.xml
         
@@ -174,3 +179,9 @@ jobs:
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
           cmake --build _build --config $BUILD_TYPE -j$(sysctl -n hw.logicalcpu)
+
+      - name: Test
+        working-directory: ${{github.workspace}}/_build/install/far.app/Contents/MacOS
+        shell: bash
+        run: ./far
+
