--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,7 @@ jobs:
           libssl-dev libsmbclient-dev libnfs-dev libneon27-dev libssh-dev
           libarchive-dev
           python3-dev python3-cffi
+          libluajit-5.1-dev
 
       - name: Create Build Environment
         # Create a separate build directory as working directory for all subsequent commands
@@ -114,6 +115,7 @@ jobs:
           libarchive-dev
           python3-dev python3-cffi
           python3-markdown appstream
+          libluajit-5.1-dev
   
       - name: Create Build Environment
         # Create a separate build directory as working directory for all subsequent commands
@@ -159,6 +161,7 @@ jobs:
           libxi
           samba libnfs neon libssh
           libarchive
+          luajit
 
       - name: Relink 'keg-only' packages
         run: brew link libarchive --force
