--- a/luafar/CMakeLists.txt
+++ b/luafar/CMakeLists.txt
@@ -1,12 +1,14 @@
 project (luafar)
 
-add_library(luafar SHARED luafar.cpp)
+add_library(${PROJECT_NAME} SHARED lf_luafar.cpp)
 
-add_dependencies(luafar far)
+add_dependencies(${PROJECT_NAME} far)
 
-target_link_libraries(luafar far winport)
+target_include_directories(${PROJECT_NAME} PRIVATE ${LIBLUA_INCLUDE_DIRS})
 
-set_target_properties(luafar
+target_link_libraries(${PROJECT_NAME} far winport)
+
+set_target_properties(${PROJECT_NAME}
   PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/Plugins/luafar"
     PREFIX ""
