--- a/myplug/CMakeLists.txt
+++ b/myplug/CMakeLists.txt
@@ -1,11 +1,14 @@
 project (myplug)
 
-add_library(myplug MODULE myplug.cpp)
+add_library(${PROJECT_NAME} MODULE myplug.cpp)
 
-target_link_libraries(myplug luafar)
+include_directories(${LIBLUA_INCLUDE_DIRS})
 
-set_target_properties(myplug
+target_link_libraries(${PROJECT_NAME} luafar)
+
+set_target_properties(${PROJECT_NAME}
   PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/Plugins/luafar/myplug/plug"
     PREFIX ""
-    SUFFIX ".far-plug-wide")
+    SUFFIX ".far-plug-wide"
+)
