--- a/far/CMakeLists.txt
+++ b/far/CMakeLists.txt
@@ -1,14 +1,19 @@
 project (far)
 
+set(SOURCES
+  far.cpp
+  find_files.cpp
+)
+
 # Set target names for the executables
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     set(MACOSX_BUNDLE_BUNDLE_NAME ${APP_NAME})
-    add_executable(far MACOSX_BUNDLE far.cpp)
+    add_executable(far MACOSX_BUNDLE ${SOURCES})
     set_target_properties(far PROPERTIES
         OUTPUT_NAME ${APP_NAME}
         RUNTIME_OUTPUT_DIRECTORY ${APP_DIR})
 else()
-    add_executable(far far.cpp)
+    add_executable(far ${SOURCES})
     set_target_properties(far PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY "${INSTALL_DIR}")
 endif()
