--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ cmake_minimum_required (VERSION 3.10)
 
 project (far)
 
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 message(STATUS "==> CMAKE_SYSTEM_NAME is ${CMAKE_SYSTEM_NAME}")
 
 set(APP_NAME "far")
